fix crash with immutable list